kubernetes/kustomize/maubot/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maubot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/duration: "8760h"
    cert-manager.io/renew-before: "720h"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - matrix.eco.tsi-dev.otc-service.com
      secretName: maubot-tls
  rules:
    - host: matrix.eco.tsi-dev.otc-service.com
      http:
        paths:
          - path: /_matrix/maubot
            pathType: Prefix
            backend:
              service:
                name: maubot
                port:
                  number: 29316
